# yandex-disk-cpp-client

./: CMakeLists.txt  Doxyfile  README.md  YandexDiskClient.cpp  YandexDiskClient.h  main.cpp  vcpkg.json
.github/workflows/: build.yml  ci.yml
cmake/: yandex-disk-cpp-clientConfig.cmake.in
docs/: class_yandex_disk_client-members.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  functions_func.html
docs/html/: _yandex_disk_client_8h_source.html  annotated.html  annotated_dup.js  class_yandex_disk_client.html  class_yandex_disk_client.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  index.html  navtreedata.js  navtreeindex0.js
docs/html/search/: all_9.js  classes_0.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_8.js  searchdata.js
docs/search/: all_2.js  all_6.js  all_7.js  functions_9.js
examples/: directory_upload_download.cpp  main.cpp  move_rename.cpp  publish_unpublish.cpp  search_files.cpp  trash_management.cpp
